feat: add util pagination and implement in getAll Api
